--- a/Controller/ControllerOverlay.css
+++ b/Controller/ControllerOverlay.css
@@ -1,6 +1,6 @@
 /*BEGIN Xbox One Controller Styling*/
 .controller.xbox {
-    background: url(base.png);
+    background: url(https://imgur.com/nfbrmVe.png);
     height: 630px;
     width: 750px;
     /*    margin-left: -375px;
